jlamontSC-test/src/objects/PotentialDupContact__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PotentialDupContacts</relationshipLabel>
        <relationshipName>PotentialDupContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PotentialDupContacts</relationshipLabel>
        <relationshipName>PotentialDupContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PotentialDupContacts (Contact2)</relationshipLabel>
        <relationshipName>PotentialDupContacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PotentialDupContact</label>
    <nameField>
        <displayFormat>PDC-{00000000}</displayFormat>
        <label>PotentialDupContact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PotentialDupContacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>